// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/auto-complete/demo/basic.md extend context correctly 1`] = `
Array [
  <div
    class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      >
        input here
      </span>
    </div>
    <div>
      <div
        class="ant-select-dropdown ant-select-dropdown-empty"
        style="opacity:0;pointer-events:none"
      >
        <div>
          <div
            class="ant-select-item-empty"
            id="undefined_list"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      >
        control mode
      </span>
    </div>
    <div>
      <div
        class="ant-select-dropdown ant-select-dropdown-empty"
        style="opacity:0;pointer-events:none"
      >
        <div>
          <div
            class="ant-select-item-empty"
            id="undefined_list"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/auto-complete/demo/certain-category.md extend context correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:250px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <span
        class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-select-selection-search-input"
      >
        <span
          class="ant-input-wrapper ant-input-group"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-input ant-input-lg"
            placeholder="input here"
            role="combobox"
            type="search"
            value=""
          />
          <span
            class="ant-input-group-addon"
          >
            <button
              class="ant-btn ant-btn-lg ant-btn-icon-only ant-input-search-button"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
                style="color:#999999"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown certain-category-search-dropdown"
      style="opacity:0;pointer-events:none;width:500px"
    >
      <div>
        <div
          id="undefined_list"
          role="listbox"
          style="height:0;width:0;overflow:hidden"
        >
          <div
            aria-selected="false"
            id="undefined_list_0"
            role="presentation"
          />
          <div
            aria-selected="false"
            id="undefined_list_1"
            role="option"
          >
            AntDesign
          </div>
          <div
            aria-selected="false"
            id="undefined_list_2"
            role="option"
          >
            AntDesign UI
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position:relative"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height:256px;overflow-y:auto;overflow-anchor:none"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display:flex;flex-direction:column"
              >
                <div
                  class="ant-select-item ant-select-item-group"
                >
                  <span>
                    Libraries
                    <a
                      href="https://www.google.com/search?q=antd"
                      rel="noopener noreferrer"
                      style="float:right"
                      target="_blank"
                    >
                      more
                    </a>
                  </span>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped ant-select-item-option-active"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <div
                      style="display:flex;justify-content:space-between"
                    >
                      AntDesign
                      <span>
                        <span
                          aria-label="user"
                          class="anticon anticon-user"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="user"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                            />
                          </svg>
                        </span>
                         10000
                      </span>
                    </div>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <div
                      style="display:flex;justify-content:space-between"
                    >
                      AntDesign UI
                      <span>
                        <span
                          aria-label="user"
                          class="anticon anticon-user"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="user"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                            />
                          </svg>
                        </span>
                         10600
                      </span>
                    </div>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
                <div
                  class="ant-select-item ant-select-item-group"
                >
                  <span>
                    Solutions
                    <a
                      href="https://www.google.com/search?q=antd"
                      rel="noopener noreferrer"
                      style="float:right"
                      target="_blank"
                    >
                      more
                    </a>
                  </span>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <div
                      style="display:flex;justify-content:space-between"
                    >
                      AntDesign UI FAQ
                      <span>
                        <span
                          aria-label="user"
                          class="anticon anticon-user"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="user"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                            />
                          </svg>
                        </span>
                         60100
                      </span>
                    </div>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <div
                      style="display:flex;justify-content:space-between"
                    >
                      AntDesign FAQ
                      <span>
                        <span
                          aria-label="user"
                          class="anticon anticon-user"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="user"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                            />
                          </svg>
                        </span>
                         30010
                      </span>
                    </div>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
                <div
                  class="ant-select-item ant-select-item-group"
                >
                  <span>
                    Articles
                    <a
                      href="https://www.google.com/search?q=antd"
                      rel="noopener noreferrer"
                      style="float:right"
                      target="_blank"
                    >
                      more
                    </a>
                  </span>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <div
                      style="display:flex;justify-content:space-between"
                    >
                      AntDesign design language
                      <span>
                        <span
                          aria-label="user"
                          class="anticon anticon-user"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="user"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                            />
                          </svg>
                        </span>
                         100000
                      </span>
                    </div>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/custom.md extend context correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <textarea
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-input ant-select-selection-search-input custom"
        placeholder="input here"
        role="combobox"
        style="height:50px"
        type="search"
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-empty"
      style="opacity:0;pointer-events:none"
    >
      <div>
        <div
          class="ant-select-item-empty"
          id="undefined_list"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/form-debug.md extend context correctly 1`] = `
<form
  class="ant-form ant-form-horizontal"
  style="margin:0 auto"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="单独 AutoComplete"
      >
        单独 AutoComplete
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="undefined_list_0"
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  role="combobox"
                  type="search"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              />
            </div>
            <div>
              <div
                class="ant-select-dropdown ant-select-dropdown-empty"
                style="opacity:0;pointer-events:none"
              >
                <div>
                  <div
                    class="ant-select-item-empty"
                    id="undefined_list"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="单独 TreeSelect"
      >
        单独 TreeSelect
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  readonly=""
                  role="combobox"
                  style="opacity:0"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              />
            </div>
            <div>
              <div
                class="ant-select-dropdown ant-tree-select-dropdown ant-select-dropdown-empty"
                style="opacity:0;pointer-events:none"
              >
                <div>
                  <div
                    class="ant-select-empty"
                    role="listbox"
                  >
                    <div
                      class="ant-empty ant-empty-normal ant-empty-small"
                    >
                      <div
                        class="ant-empty-image"
                      >
                        <svg
                          fill="none"
                          height="96"
                          viewBox="0 0 96 96"
                          width="96"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <ellipse
                            cx="48"
                            cy="85"
                            fill="#F2F2F2"
                            rx="45"
                            ry="6"
                          />
                          <path
                            d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                            fill="white"
                            stroke="#D8D8D8"
                          />
                          <path
                            d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                            fill="#DBDBDB"
                          />
                          <circle
                            cx="91"
                            cy="14"
                            fill="#D8D8D8"
                            opacity="0.5"
                            r="3"
                          />
                          <circle
                            cx="85"
                            cy="7"
                            fill="#D8D8D8"
                            opacity="0.3"
                            r="2"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                            fill="#D8D8D8"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                            fill="#FAFAFA"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="ant-empty-description"
                      >
                        No Data
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="on"
            >
              <span
                aria-label="arrow-down"
                class="anticon anticon-arrow-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="添加 Input.Group 正常"
      >
        添加 Input.Group 正常
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:30%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-tree-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-empty"
                      role="listbox"
                    >
                      <div
                        class="ant-empty ant-empty-normal ant-empty-small"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            fill="none"
                            height="96"
                            viewBox="0 0 96 96"
                            width="96"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <ellipse
                              cx="48"
                              cy="85"
                              fill="#F2F2F2"
                              rx="45"
                              ry="6"
                            />
                            <path
                              d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                              fill="white"
                              stroke="#D8D8D8"
                            />
                            <path
                              d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                              fill="#DBDBDB"
                            />
                            <circle
                              cx="91"
                              cy="14"
                              fill="#D8D8D8"
                              opacity="0.5"
                              r="3"
                            />
                            <circle
                              cx="85"
                              cy="7"
                              fill="#D8D8D8"
                              opacity="0.3"
                              r="2"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                              fill="#D8D8D8"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                              fill="#FAFAFA"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          No Data
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  aria-label="arrow-down"
                  class="anticon anticon-arrow-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    role="combobox"
                    type="search"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-item-empty"
                      id="undefined_list"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="包含 search 图标正常"
      >
        包含 search 图标正常
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <span
                  class="ant-input-affix-wrapper ant-select-selection-search-input"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-input"
                    role="combobox"
                    type="search"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      aria-label="search"
                      class="anticon anticon-search"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="ant-select-selection-placeholder"
              />
            </div>
            <div>
              <div
                class="ant-select-dropdown ant-select-dropdown-empty"
                style="opacity:0;pointer-events:none"
              >
                <div>
                  <div
                    class="ant-select-item-empty"
                    id="undefined_list"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="同时有 Input.Group 和图标发生移位"
      >
        同时有 Input.Group 和图标发生移位
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:30%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-tree-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-empty"
                      role="listbox"
                    >
                      <div
                        class="ant-empty ant-empty-normal ant-empty-small"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            fill="none"
                            height="96"
                            viewBox="0 0 96 96"
                            width="96"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <ellipse
                              cx="48"
                              cy="85"
                              fill="#F2F2F2"
                              rx="45"
                              ry="6"
                            />
                            <path
                              d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                              fill="white"
                              stroke="#D8D8D8"
                            />
                            <path
                              d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                              fill="#DBDBDB"
                            />
                            <circle
                              cx="91"
                              cy="14"
                              fill="#D8D8D8"
                              opacity="0.5"
                              r="3"
                            />
                            <circle
                              cx="85"
                              cy="7"
                              fill="#D8D8D8"
                              opacity="0.3"
                              r="2"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                              fill="#D8D8D8"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                              fill="#FAFAFA"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          No Data
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  aria-label="arrow-down"
                  class="anticon anticon-arrow-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <span
                    class="ant-input-affix-wrapper ant-select-selection-search-input"
                  >
                    <input
                      aria-activedescendant="undefined_list_0"
                      aria-autocomplete="list"
                      aria-controls="undefined_list"
                      aria-haspopup="listbox"
                      aria-owns="undefined_list"
                      autocomplete="off"
                      class="ant-input"
                      role="combobox"
                      type="search"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-item-empty"
                      id="undefined_list"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="同时有 Input.Group 和 Search 组件发生移位"
      >
        同时有 Input.Group 和 Search 组件发生移位
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:30%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-tree-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-empty"
                      role="listbox"
                    >
                      <div
                        class="ant-empty ant-empty-normal ant-empty-small"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            fill="none"
                            height="96"
                            viewBox="0 0 96 96"
                            width="96"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <ellipse
                              cx="48"
                              cy="85"
                              fill="#F2F2F2"
                              rx="45"
                              ry="6"
                            />
                            <path
                              d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                              fill="white"
                              stroke="#D8D8D8"
                            />
                            <path
                              d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                              fill="#DBDBDB"
                            />
                            <circle
                              cx="91"
                              cy="14"
                              fill="#D8D8D8"
                              opacity="0.5"
                              r="3"
                            />
                            <circle
                              cx="85"
                              cy="7"
                              fill="#D8D8D8"
                              opacity="0.3"
                              r="2"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                              fill="#D8D8D8"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                              fill="#FAFAFA"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          No Data
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  aria-label="arrow-down"
                  class="anticon anticon-arrow-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <span
                    class="ant-input-group-wrapper ant-input-search ant-select-selection-search-input"
                  >
                    <span
                      class="ant-input-wrapper ant-input-group"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="ant-input"
                        role="combobox"
                        type="search"
                        value=""
                      />
                      <span
                        class="ant-input-group-addon"
                      >
                        <button
                          class="ant-btn ant-btn-icon-only ant-input-search-button"
                          type="button"
                        >
                          <span
                            aria-label="search"
                            class="anticon anticon-search"
                            role="img"
                            style="color:#999999"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="search"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-item-empty"
                      id="undefined_list"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="Input Group 和 Button 结合"
      >
        Input Group 和 Button 结合
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:20%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-tree-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-empty"
                      role="listbox"
                    >
                      <div
                        class="ant-empty ant-empty-normal ant-empty-small"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            fill="none"
                            height="96"
                            viewBox="0 0 96 96"
                            width="96"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <ellipse
                              cx="48"
                              cy="85"
                              fill="#F2F2F2"
                              rx="45"
                              ry="6"
                            />
                            <path
                              d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                              fill="white"
                              stroke="#D8D8D8"
                            />
                            <path
                              d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                              fill="#DBDBDB"
                            />
                            <circle
                              cx="91"
                              cy="14"
                              fill="#D8D8D8"
                              opacity="0.5"
                              r="3"
                            />
                            <circle
                              cx="85"
                              cy="7"
                              fill="#D8D8D8"
                              opacity="0.3"
                              r="2"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                              fill="#D8D8D8"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                              fill="#FAFAFA"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          No Data
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  aria-label="arrow-down"
                  class="anticon anticon-arrow-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <span
                    class="ant-input-group-wrapper ant-input-search ant-select-selection-search-input"
                  >
                    <span
                      class="ant-input-wrapper ant-input-group"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="ant-input"
                        role="combobox"
                        type="search"
                        value=""
                      />
                      <span
                        class="ant-input-group-addon"
                      >
                        <button
                          class="ant-btn ant-btn-icon-only ant-input-search-button"
                          type="button"
                        >
                          <span
                            aria-label="search"
                            class="anticon anticon-search"
                            role="img"
                            style="color:#999999"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="search"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <div>
                <div
                  class="ant-select-dropdown ant-select-dropdown-empty"
                  style="opacity:0;pointer-events:none"
                >
                  <div>
                    <div
                      class="ant-select-item-empty"
                      id="undefined_list"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
              <span>
                Search
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/auto-complete/demo/non-case-sensitive.md extend context correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    >
      try to type \`b\`
    </span>
  </div>
  <div>
    <div
      class="ant-select-dropdown"
      style="opacity:0;pointer-events:none"
    >
      <div>
        <div
          id="undefined_list"
          role="listbox"
          style="height:0;width:0;overflow:hidden"
        >
          <div
            aria-selected="false"
            id="undefined_list_0"
            role="option"
          >
            Burns Bay Road
          </div>
          <div
            aria-selected="false"
            id="undefined_list_1"
            role="option"
          >
            Downing Street
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position:relative"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height:256px;overflow-y:auto;overflow-anchor:none"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display:flex;flex-direction:column"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  title="Burns Bay Road"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Burns Bay Road
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Downing Street"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Downing Street
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Wall Street"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Wall Street
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/options.md extend context correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    >
      input here
    </span>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-empty"
      style="opacity:0;pointer-events:none"
    >
      <div>
        <div
          class="ant-select-item-empty"
          id="undefined_list"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/uncertain-category.md extend context correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:300px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <span
        class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-input-search-with-button ant-select-selection-search-input"
      >
        <span
          class="ant-input-wrapper ant-input-group"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-input ant-input-lg"
            placeholder="input here"
            role="combobox"
            type="search"
            value=""
          />
          <span
            class="ant-input-group-addon"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-lg ant-input-search-button"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
                style="color:"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-empty"
      style="opacity:0;pointer-events:none;width:252px"
    >
      <div>
        <div
          class="ant-select-item-empty"
          id="undefined_list"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
